# AtCoderTraining

./: .clang-format  README.md
ABC/: CMakeLists.txt  abc240-a.cpp  abc242-a.cpp  abc243-a.cpp  abc244-x.cpp  abc247-x.cpp  abc248-x.cpp  abc249-x.cpp  abc250-x.cpp  abc252-x.cpp  abc253-x.cpp  abc254-x.cpp  abc256-x.cpp  abc257-x.cpp  abc258-x.cpp  abc259-x.cpp  abc260-x.cpp  abc261-x.cpp  abc262-x.cpp
ABC049C-Daydream/: daydream.cpp  sample8.txt  sample9.txt  test02.txt  test03.txt  test07.txt  test08.txt  test12.txt  test13.txt  test15.txt  test21.txt  test22.txt  test24.txt  test_patterns.txt
AHC/AHC008/A/: 0000.txt  0001.txt  0002.txt  0003.txt  CMakeLists.txt  aha008-a-1.cpp  ahc008-a-1.cpp  ahc008-a-2.cpp  ahc008-a-3.cpp  ahc008-a-4.cpp  ahc008-a-5.cpp  ahc008-a-6.cpp  ahc008-a-7.cpp  ahc008-a-8.cpp  ahc008-a-98.cpp  ahc008-a-99.cpp  game.cpp
AHC/AHC008/A/tools/: Makefile  p0000.txt  sim-0000.sh  sim-all.sh  sim.sh
AHC/AHC008/A/tools/pets/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  0030.txt  0031.txt  0032.txt  0033.txt  0034.txt  0035.txt  0036.txt  0037.txt  0038.txt  0039.txt  (+60 more)
AHC/AHC009/A/: CMakeLists.txt  ahc009-a-1.cpp  ahc009-a-2.cpp  ahc009-a-3.cpp  ahc009-a-4.cpp  ahc009-a-5.cpp  ahc009-a-6.cpp  ahc009-a-7.cpp  ahc009-a-8.cpp  sample1.txt
AHC/AHC009/A/tools/: result.txt  sim-all.sh
(+3716 files in other folders)
