add_executable( ahc008-a-1 ahc008-a-1.cpp )
add_executable( ahc008-a-2 ahc008-a-2.cpp )
add_executable( ahc008-a-3 ahc008-a-3.cpp )
add_executable( ahc008-a-4 ahc008-a-4.cpp )
add_executable( ahc008-a-5 ahc008-a-5.cpp )
add_executable( ahc008-a-6 ahc008-a-6.cpp )
add_executable( ahc008-a-7 ahc008-a-7.cpp )
add_executable( ahc008-a-8 ahc008-a-8.cpp )
