add_executable( ahc009-a-1 ahc009-a-1.cpp )
add_executable( ahc009-a-2 ahc009-a-2.cpp )
add_executable( ahc009-a-3 ahc009-a-3.cpp )
add_executable( ahc009-a-4 ahc009-a-4.cpp )
add_executable( ahc009-a-5 ahc009-a-5.cpp )
add_executable( ahc009-a-6 ahc009-a-6.cpp )
add_executable( ahc009-a-7 ahc009-a-7.cpp )
add_executable( ahc009-a-8 ahc009-a-8.cpp )
